cabal-version:          2.4
name:                   andgate-blog
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:                MIT
license-file:           LICENSE
author:                 Gabriel Anderson
maintainer:             gabe4k@gmail.com
-- copyright:
-- category:
build-type:             Simple
extra-source-files:     CHANGELOG.md


executable site
  default-language:     Haskell2010
  main-is:              site.hs
  build-depends:        base >=4.12 && <4.13,
                        hakyll == 4.13.*

  ghc-options:          -Werror -Wall -threaded -j4

